Created the about and skills page

--- a/index.html
+++ b/index.html
@@ -25,40 +25,337 @@
       </nav>
       <!-- <hr class="nav-divider" /> -->
     </section>
-    <section class="welcome">
-      <div class="image">
-        <img src="./assets/1.jpg" alt="" class="profile-img" />
-      </div>
-      <div class="content">
-        <div class="intro">
-          <p class="p1">Hello I'm</p>
-          <h1 class="title">Lykos-79</h1>
-          <p class="p2" id="changing-texts">Software Enginner</p>
+    <main>
+      <section class="welcome">
+        <div class="image">
+          <img src="./assets/1.jpg" alt="" class="profile-img" />
         </div>
-        <div class="icon">
-          <a href="https://linkedin.in" class="icon-link"
-            ><i class="ri-linkedin-box-fill"></i
-          ></a>
-          <a href="https://twitter.com" class="icon-link"
-            ><i class="ri-twitter-fill"></i
-          ></a>
-          <a href="https://github.com" class="icon-link"
-            ><i class="ri-github-fill"></i
-          ></a>
+        <div class="content">
+          <div class="intro">
+            <p class="p1">Hello I'm</p>
+            <h1 class="title">Lykos-79</h1>
+            <p class="p2" id="changing-texts">Software Enginner</p>
+          </div>
+          <div class="icon">
+            <a href="https://linkedin.in" class="icon-link"
+              ><i class="ri-linkedin-box-fill"></i
+            ></a>
+            <a href="https://twitter.com" class="icon-link"
+              ><i class="ri-twitter-fill"></i
+            ></a>
+            <a href="https://github.com" class="icon-link"
+              ><i class="ri-github-fill"></i
+            ></a>
+          </div>
+          <div class="btn">
+            <button
+              class="btn-1"
+              onclick="window.open('./assets/Abhisekh_kumar_Resume.pdf')"
+            >
+              Download CV
+            </button>
+            <button class="btn-1" onclick="location.href('./#contact')">
+              Contact Us
+            </button>
+          </div>
         </div>
-        <div class="btn">
-          <button
-            class="btn-1"
-            onclick="window.open('./assets/Abhisekh_kumar_Resume.pdf')"
-          >
-            Download CV
-          </button>
-          <button class="btn-1" onclick="location.href('./#contact')">
-            Contact Us
-          </button>
+      </section>
+      <hr class="nav-divider" />
+      <section class="about" id="about">
+        <div class="about-container">
+          <p class="p-cont">Get to know more</p>
+          <h2 class="h2-cont">About Me</h2>
+          <div class="about-content">
+            <div class="abt-img">
+              <img src="./assets/php.jpg" alt="" class="abt-prf-img" />
+            </div>
+            <div class="abt-text-container">
+              <div class="about-box">
+                <div class="abt-box-1">
+                  <img
+                    src="./assets/experience.png"
+                    alt="achivement-icon"
+                    class="abt-icon"
+                  />
+                  <span class="abt-icon-text">
+                    <h3>Achivements</h3>
+                    <p>
+                      Sub-head, Technical Team <br /><b
+                        >Student Concious Club</b
+                      >
+                    </p>
+                  </span>
+                </div>
+                <div class="abt-box-1">
+                  <img
+                    src="./assets/education.png"
+                    alt="education-icon"
+                    class="abt-icon"
+                  />
+                  <span class="abt-icon-text">
+                    <h3>Education</h3>
+                    <p>
+                      Chaudhary Charan Singh University <br /><b
+                        >B.tech Computer Science</b
+                      >
+                    </p>
+                  </span>
+                </div>
+              </div>
+              <div class="text-container">
+                <p class="abt-text">
+                  "Computer Science student and dedicated content creator with a
+                  passion for web development, particularly in the MERN stack.
+                  Skilled in responsive design, I craft engaging projects,
+                  blending technical knowledge with a creative touch. I'm
+                  committed to continuous learning, exploring JavaScript, data
+                  structures, and <br />CS fundamentals, I strive to blend
+                  creativity with technical expertise."
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
+      <hr class="nav-divider" />
+      <section class="skills" id="skills">
+        <div class="skills-container">
+          <p class="p-cont">Explore my</p>
+          <h2 class="h2-cont">Skills Section</h2>
+          <div class="skills-box-top">
+            <div class="skills-box">
+              <div class="skill-box-text">
+                <p class="skills-box-p">Programing & scripting language</p>
+              </div>
+              <div class="skills-box-span">
+                <div class="skill-item">
+                  <img
+                    src="./assets/checkmark.png"
+                    alt="HTML icon"
+                    class="skill-icon"
+                  />
+                  <span class="skill-icon-text">HTML</span>
+                </div>
+                <div class="skill-item">
+                  <img
+                    src="./assets/checkmark.png"
+                    alt="HTML icon"
+                    class="skill-icon"
+                  />
+                  <span class="skill-icon-text">CSS</span>
+                </div>
+                <div class="skill-item">
+                  <img
+                    src="./assets/checkmark.png"
+                    alt="HTML icon"
+                    class="skill-icon"
+                  />
+                  <span class="skill-icon-text">Bootstrap</span>
+                </div>
+                <div class="skill-item">
+                  <img
+                    src="./assets/checkmark.png"
+                    alt="HTML icon"
+                    class="skill-icon"
+                  />
+                  <span class="skill-icon-text">Java Script</span>
+                </div>
+                <div class="skill-item">
+                  <img
+                    src="./assets/checkmark.png"
+                    alt="HTML icon"
+                    class="skill-icon"
+                  />
+                  <span class="skill-icon-text">Tailwind CSS</span>
+                </div>
+                <div class="skill-item">
+                  <img
+                    src="./assets/checkmark.png"
+                    alt="HTML icon"
+                    class="skill-icon"
+                  />
+                  <span class="skill-icon-text">Java Script</span>
+                </div>
+              </div>
+            </div>
+            <div class="skills-box">
+              <div class="skill-box-text">
+                <p class="skills-box-p">Frontend, frameworks & libraries</p>
+              </div>
+              <div class="skills-box-span">
+                <div class="skill-item">
+                  <img
+                    src="./assets/checkmark.png"
+                    alt="HTML icon"
+                    class="skill-icon"
+                  />
+                  <span class="skill-icon-text">HTML</span>
+                </div>
+                <div class="skill-item">
+                  <img
+                    src="./assets/checkmark.png"
+                    alt="HTML icon"
+                    class="skill-icon"
+                  />
+                  <span class="skill-icon-text">CSS</span>
+                </div>
+                <div class="skill-item">
+                  <img
+                    src="./assets/checkmark.png"
+                    alt="HTML icon"
+                    class="skill-icon"
+                  />
+                  <span class="skill-icon-text">Bootstrap</span>
+                </div>
+                <div class="skill-item">
+                  <img
+                    src="./assets/checkmark.png"
+                    alt="HTML icon"
+                    class="skill-icon"
+                  />
+                  <span class="skill-icon-text">Java Script</span>
+                </div>
+                <div class="skill-item">
+                  <img
+                    src="./assets/checkmark.png"
+                    alt="HTML icon"
+                    class="skill-icon"
+                  />
+                  <span class="skill-icon-text">Tailwind CSS</span>
+                </div>
+                <div class="skill-item">
+                  <img
+                    src="./assets/checkmark.png"
+                    alt="HTML icon"
+                    class="skill-icon"
+                  />
+                  <span class="skill-icon-text">Java Script</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="skills-box-bottom">
+            <div class="skills-box">
+              <div class="skill-box-text">
+                <p class="skills-box-p">Backend Databases</p>
+              </div>
+              <div class="skills-box-span">
+                <div class="skill-item">
+                  <img
+                    src="./assets/checkmark.png"
+                    alt="HTML icon"
+                    class="skill-icon"
+                  />
+                  <span class="skill-icon-text">HTML</span>
+                </div>
+                <div class="skill-item">
+                  <img
+                    src="./assets/checkmark.png"
+                    alt="HTML icon"
+                    class="skill-icon"
+                  />
+                  <span class="skill-icon-text">CSS</span>
+                </div>
+                <div class="skill-item">
+                  <img
+                    src="./assets/checkmark.png"
+                    alt="HTML icon"
+                    class="skill-icon"
+                  />
+                  <span class="skill-icon-text">Bootstrap</span>
+                </div>
+                <div class="skill-item">
+                  <img
+                    src="./assets/checkmark.png"
+                    alt="HTML icon"
+                    class="skill-icon"
+                  />
+                  <span class="skill-icon-text">Java Script</span>
+                </div>
+                <div class="skill-item">
+                  <img
+                    src="./assets/checkmark.png"
+                    alt="HTML icon"
+                    class="skill-icon"
+                  />
+                  <span class="skill-icon-text">Tailwind CSS</span>
+                </div>
+                <div class="skill-item">
+                  <img
+                    src="./assets/checkmark.png"
+                    alt="HTML icon"
+                    class="skill-icon"
+                  />
+                  <span class="skill-icon-text">Java Script</span>
+                </div>
+              </div>
+            </div>
+            <div class="skills-box">
+              <div class="skill-box-text">
+                <p class="skills-box-p">Version control tools</p>
+              </div>
+              <div class="skills-box-span">
+                <div class="skill-item">
+                  <img
+                    src="./assets/checkmark.png"
+                    alt="HTML icon"
+                    class="skill-icon"
+                  />
+                  <span class="skill-icon-text">HTML</span>
+                </div>
+                <div class="skill-item">
+                  <img
+                    src="./assets/checkmark.png"
+                    alt="HTML icon"
+                    class="skill-icon"
+                  />
+                  <span class="skill-icon-text">CSS</span>
+                </div>
+                <div class="skill-item">
+                  <img
+                    src="./assets/checkmark.png"
+                    alt="HTML icon"
+                    class="skill-icon"
+                  />
+                  <span class="skill-icon-text">Bootstrap</span>
+                </div>
+                <div class="skill-item">
+                  <img
+                    src="./assets/checkmark.png"
+                    alt="HTML icon"
+                    class="skill-icon"
+                  />
+                  <span class="skill-icon-text">Java Script</span>
+                </div>
+                <div class="skill-item">
+                  <img
+                    src="./assets/checkmark.png"
+                    alt="HTML icon"
+                    class="skill-icon"
+                  />
+                  <span class="skill-icon-text">Tailwind CSS</span>
+                </div>
+                <div class="skill-item">
+                  <img
+                    src="./assets/checkmark.png"
+                    alt="HTML icon"
+                    class="skill-icon"
+                  />
+                  <span class="skill-icon-text">Java Script</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <hr class="nav-divider" />
+      <section class="projects" id="projects">
+        <div class="projects-container">
+          <p class="p-cont">Browse my recent</p>
+          <h2 class="h2-cont">Projects</h2>
+        </div>
+      </section>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
